fixed miss-aligned text in header

--- a/src/app.css
+++ b/src/app.css
@@ -17,3 +17,8 @@ h3,
 .poppins {
     font-family: 'Poppins', sans-serif;
 }
+
+
+.blueShadow {
+    box-shadow: 0px 4px 55px rgba(108, 40, 217, 0.255);
+}
